--- a/workExtreme.html
+++ b/workExtreme.html
@@ -2,143 +2,141 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="阮楚琳(Chu-lin)作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
-  <title>Chu-lin's portfolio</title>
-  <!-- for swiper link css -->
-  <link rel="stylesheet" href="./css/swiper-bundle.min.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />      -->
-  <link rel="stylesheet" href="./css/reset.css" type="text/css" />
-  <link rel="stylesheet" href="./css/layout_desktop.css" type="text/css" />
-  <link rel="stylesheet" href="./css/layout_mobile.css" type="text/css" />
-  <link rel="stylesheet" href="./css/for_swiper.css" type="text/css" />
-  <link rel="stylesheet" href="./css/for_boos.css" type="text/css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="阮楚琳(Chu-lin)作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <title>Chu-lin's portfolio</title>
+    <!-- for swiper link css -->
+    <!-- <link rel="stylesheet" href="./css/swiper-bundle.min.css" type="text/css" /> -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="./css/layout_desktop.css" type="text/css" />
+    <link rel="stylesheet" href="./css/layout_mobile.css" type="text/css" />
+    <link rel="stylesheet" href="./css/for_swiper.css" type="text/css" />
+    <link rel="stylesheet" href="./css/for_boos.css" type="text/css" />
 
 </head>
 
 <body>
 
-  <a href="home.html">
-    <div class="back">
-      <p>Back</p>
+    <a href="home.html">
+        <div class="back">
+            <p>Back</p>
+        </div>
+    </a>
+
+    <div class="goTOP">
+
+        <p>TOP</p>
     </div>
-  </a>
-
-  <div class="goTOP">
-
-    <p>TOP</p>
-  </div>
-  <nav>
-    <div class="navbar">
-      <a href="home.html"><svg class="logo">
+    <nav>
+        <div class="navbar">
+            <a href="home.html"><svg class="logo">
           <use xlink:href="./icomoon/symbol-defs.svg#icon-chu-logo"></use>
         </svg></a>
-      <svg class="menu">
+            <svg class="menu">
         <use xlink:href="./icomoon/symbol-defs.svg#icon-menu"></use>
       </svg>
 
-    </div>
+        </div>
 
-  </nav>
-  <div class="navbarM">
-    <svg class="close">
+    </nav>
+    <div class="navbarM">
+        <svg class="close">
       <use xlink:href="./icomoon/symbol-defs.svg#icon-close"></use>
     </svg>
-    <ul class="navListM">
+        <ul class="navListM">
+            <a href="home.html">
+                <li>Home</li>
+            </a>
+            <a href="home.html">
+                <li> About</li>
+            </a>
+            <a href="home.html">
+                <li>Work experience</li>
+            </a>
+            <a href="home.html">
+                <li>Performances experience</li>
+            </a>
+            <a href="home.html">
+                <li>Hobby</li>
+            </a>
+        </ul>
 
-      <li>Home</li>
-      <li> About</li>
-      <li>Work experience</li>
-      <li>Performances experience</li>
-      <li>Hobby</li>
-    </ul>
+    </div>
 
-  </div>
+    <div class="container">
+        <div class="row workContent">
+            <div class="workTitle col-12 col-lg-6">
+                <h2>Work experience</h2>
+                <p>2017 Jun - 2018 Mar</p>
+                <h3>節目製作部 活動視覺設計師</h3>
+                <p>極限電競股份有限公司</p><br>
+                <p class="maingray50">主要工具：</p>
 
-  <div class="container">
-    <div class="row workContent">
-      <div class="workTitle col-12 col-lg-6">
-        <h2>Work experience</h2>
-        <p>2017 Jun - 2018 Mar</p>
-        <h3>節目製作部 活動視覺設計師</h3>
-        <p>極限電競股份有限公司</p><br>
-        <p class="maingray50">主要工具：</p>
-
-        <svg class="skills-icon col-3 col-sm-2 col-xl-2 ">
+                <svg class="skills-icon col-3 col-sm-2 col-xl-2 ">
           <use xlink:href="./icomoon/symbol-defs.svg#icon-adobeillustrator"></use>
         </svg>
-        <svg class="skills-icon col-3 col-sm-2 col-xl-2 ">
+                <svg class="skills-icon col-3 col-sm-2 col-xl-2 ">
           <use xlink:href="./icomoon/symbol-defs.svg#icon-adobephotoshop"></use>
         </svg>
 
 
-      </div>
-      <div class="workarticle col-12 col-lg-6">
-        <p class="maingray50">主要工作內容：</p>
-        <p>
-          1.活動網站的UI介面規劃.<br>2.網站icon、banner設計.<br>3.協會與戰隊的LOGO與標準字設計.<br>4.大型賽式活動平面設計（印刷品及大型刊物等等）.<br>5.電競賽式轉播影片的介面設計.<br>6.提案簡報排版及插圖繪製.
-          <br>7.參與《校際電競公開賽》活動籌備，處理三天現場報到事項並帶隊64組電競隊伍入場.
-        </p>
-      </div>
+            </div>
+            <div class="workarticle col-12 col-lg-6">
+                <p class="maingray50">主要工作內容：</p>
+                <p>
+                    1.活動網站的UI介面規劃.<br>2.網站icon、banner設計.<br>3.協會與戰隊的LOGO與標準字設計.<br>4.大型賽式活動平面設計（印刷品及大型刊物等等）.<br>5.電競賽式轉播影片的介面設計.<br>6.提案簡報排版及插圖繪製.
+                    <br>7.參與《校際電競公開賽》活動籌備，處理三天現場報到事項並帶隊64組電競隊伍入場.
+                </p>
+            </div>
+
+
+        </div>
 
 
     </div>
 
+    <!-- <div class="demo">Demo</div> -->
+    <div class="botLine"></div>
 
-  </div>
+    <div class="container">
 
-  <!-- <div class="demo">Demo</div> -->
-  <div class="botLine"></div>
-
-  <div class="container">
-
-    <p class="STitle">Demo - 網站UI介面、LOGO設計、賽式活動平面設計、提案簡報製作......等 </p>
-    <div class="picBox">
-      <img class="lazyload" data-src="./images/work18extreme/extreme (1).png" alt="美術圖繪製"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (2).png" alt="電競隊伍Logo設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (3).png" alt="美術圖繪製"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (4).png" alt="美術圖繪製"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (5).png" alt="協會Logo設計初稿"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (6).png" alt="協會Logo設計初稿"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (7).png" alt="電競比賽報名網站規劃"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (8).png" alt="簡報插圖繪製"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (28).png" alt="電競聯賽Logo設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (9).png" alt="簡報插圖繪製"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (10).png" alt="EDM設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (11).png" alt="協會信封設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (12).png" alt="活動文宣排版與繪製"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (13).png" alt="網站UI設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (14).png" alt="網站UI設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (15).png" alt="Logo設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (16).png" alt="電競比賽報名網站規劃><img class="lazyload"
-        data-src="./images/work18extreme/extreme (17).png" alt="獎金字卡設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (18).png" alt="協會Logo設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (19).png" alt="插圖繪製"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (20).png" alt="大型勘版設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (21).png" alt="電競聯賽網站"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (22).png" alt="邀請DM設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (23).png" alt="電競聯賽網站規劃"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (24).png" alt="位置圖設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (25).png" alt="協會Logo設計初稿"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (26).png" alt="協會Logo設計初稿"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (27).png" alt="電視轉播鏡面設計">
-      <img class="lazyload" data-src="./images/work18extreme/extreme (1).gif" alt="電競聯賽網站">
-      <img class="lazyload" data-src="./images/work18extreme/extreme (1).jpg" alt="大型牆面廣告設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (2).jpg" alt="大圖廣告設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (3).jpg" alt="Logo設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (4).jpg" alt="布條設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (5).jpg" alt="大圖廣告設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (6).jpg" alt="關東旗設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (7).jpg" alt="活動字卡設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (8).jpg" alt="大圖廣告設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (9).jpg" alt="大圖廣告設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (10).jpg" alt="大圖廣告設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (11).jpg" alt="網頁icon設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (12).jpg" alt="協助參與電競比賽現場"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (13).jpg" alt="獎金字卡設計"><img class="lazyload"
-        data-src="./images/work18extreme/extreme (14).jpg" alt="邀請卡設計">
+        <p class="STitle">Demo - 網站UI介面、LOGO設計、賽式活動平面設計、提案簡報製作......等 </p>
+        <div class="picBox">
+            <img class="lazyload" data-src="./images/work18extreme/extreme (1).png" alt="美術圖繪製"><img class="lazyload" data-src="./images/work18extreme/extreme (2).png" alt="電競隊伍Logo設計"><img class="lazyload" data-src="./images/work18extreme/extreme (3).png"
+                alt="美術圖繪製"><img class="lazyload" data-src="./images/work18extreme/extreme (4).png" alt="美術圖繪製"><img class="lazyload" data-src="./images/work18extreme/extreme (5).png" alt="協會Logo設計初稿"><img class="lazyload" data-src="./images/work18extreme/extreme (6).png"
+                alt="協會Logo設計初稿"><img class="lazyload" data-src="./images/work18extreme/extreme (7).png" alt="電競比賽報名網站規劃"><img class="lazyload" data-src="./images/work18extreme/extreme (8).png" alt="簡報插圖繪製"><img class="lazyload" data-src="./images/work18extreme/extreme (28).png"
+                alt="電競聯賽Logo設計"><img class="lazyload" data-src="./images/work18extreme/extreme (9).png" alt="簡報插圖繪製"><img class="lazyload" data-src="./images/work18extreme/extreme (10).png" alt="EDM設計"><img class="lazyload" data-src="./images/work18extreme/extreme (11).png"
+                alt="協會信封設計"><img class="lazyload" data-src="./images/work18extreme/extreme (12).png" alt="活動文宣排版與繪製"><img class="lazyload" data-src="./images/work18extreme/extreme (13).png" alt="網站UI設計"><img class="lazyload" data-src="./images/work18extreme/extreme (14).png"
+                alt="網站UI設計"><img class="lazyload" data-src="./images/work18extreme/extreme (15).png" alt="Logo設計"><img class="lazyload" data-src="./images/work18extreme/extreme (16).png" alt="電競比賽報名網站規劃><img class=" lazyload "
+        data-src="./images/work18extreme/extreme (17).png " alt="獎金字卡設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (18).png " alt="協會Logo設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (19).png " alt="插圖繪製 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (20).png " alt="大型勘版設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (21).png " alt="電競聯賽網站 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (22).png " alt="邀請DM設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (23).png " alt="電競聯賽網站規劃 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (24).png " alt="位置圖設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (25).png " alt="協會Logo設計初稿 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (26).png " alt="協會Logo設計初稿 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (27).png " alt="電視轉播鏡面設計 ">
+      <img class="lazyload " data-src="./images/work18extreme/extreme (1).gif " alt="電競聯賽網站 ">
+      <img class="lazyload " data-src="./images/work18extreme/extreme (1).jpg " alt="大型牆面廣告設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (2).jpg " alt="大圖廣告設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (3).jpg " alt="Logo設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (4).jpg " alt="布條設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (5).jpg " alt="大圖廣告設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (6).jpg " alt="關東旗設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (7).jpg " alt="活動字卡設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (8).jpg " alt="大圖廣告設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (9).jpg " alt="大圖廣告設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (10).jpg " alt="大圖廣告設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (11).jpg " alt="網頁icon設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (12).jpg " alt="協助參與電競比賽現場 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (13).jpg " alt="獎金字卡設計 "><img class="lazyload "
+        data-src="./images/work18extreme/extreme (14).jpg " alt="邀請卡設計 ">
 
 
 
@@ -148,21 +146,21 @@
 
   </div>
 
-  <div class="bottomplace">
+  <div class="bottomplace ">
 
     <footer>
-      <div class="footerbg">Chu-lin's Portfolio © 2021 Copyright</div>
+      <div class="footerbg ">Chu-lin's Portfolio © 2021 Copyright</div>
     </footer>
   </div>
 
 
   <!-- for swiper link  js  -->
-  <script src="./js/swiper-bundle.min.js"></script>
-  <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
-  <!-- <script src="./js/jquery-3.5.1.js"></script> -->
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-  <script src="./js/lazysizes.min.js"></script>
+  <!-- <script src="./js/swiper-bundle.min.js "></script> -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js "></script>
+  <!-- <script src="./js/jquery-3.5.1.js "></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js " integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin=" anonymous "></script>
+  <script src="./js/lazysizes.min.js "></script>
   <script>
     // 手機版菜單點出--------------------
 
@@ -173,17 +171,16 @@
       $('.navbarM').css('transform', 'translate3d(-1200px,0px,0px)')
     })
 
-    //---------------------------------手機版的nav的表 第幾個跳第幾個-----------------------
-    $('.navListM li').click(function () {
 
-      // mobile在nav取LI第幾個的值
-      let navLi = $('.navListM li').index(this);
-      // console.log(navLi)
-      // $('.swiper-pagination span').eq(navLi).trigger('click');
-      // 上面這個是點了觸發swiper-pagination的第幾個在trigger觸發點擊
-      swiper.slideTo(navLi);
-      // 這個是取到swiper的第幾個
-    })
+        //---------------------------------手機版的nav的表 第幾個跳第幾個-----------------------
+        $('.navListM li').click(function() {
+
+// mobile在nav取LI第幾個的值
+let navLi = $('.navListM li').index(this);
+
+localStorage.localIndex = navLi;
+//回到主頁給他 傳數值 指定到第幾頁
+})
 
 
 
@@ -196,10 +193,10 @@
       console.log('call', imgAlt);
       // 在body增加div
       $('body').append(` 
-         <div class="popup"></div>
-    <div class="popBox">
-        <img class="lazyload" data-src="" alt="">
-        <svg  class="popclose"><use xlink:href="./icomoon/symbol-defs.svg#icon-close"></use>  </svg>
+         <div class="popup "></div>
+    <div class="popBox ">
+        <img class="lazyload " data-src=" " alt=" ">
+        <svg  class="popclose "><use xlink:href="./icomoon/symbol-defs.svg#icon-close "></use>  </svg>
         <p></p>
     </div>
     
@@ -236,7 +233,7 @@
     })
     // 點了跑上去TOP
     $('.goTOP').click(function () {
-      $("html,body").animate({
+      $("html,body ").animate({
         scrollTop: 0
       }, 700);
     })
