--- a/home.html
+++ b/home.html
@@ -530,8 +530,8 @@
     </div>
 
     <!-- for swiper link  js  -->
-    <script src="./js/swiper-bundle.min.js"></script>
-    <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+    <!-- <script src="./js/swiper-bundle.min.js"></script> -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- jqury -->
     <!-- <script src="./js/jquery-3.5.1.js"></script> -->
