--- a/workFuntown.html
+++ b/workFuntown.html
@@ -8,8 +8,8 @@
     <meta name="description" content="阮楚琳(Chu-lin)作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
     <title>Chu-lin's portfolio</title>
     <!-- for swiper link css -->
-    <!-- <link rel="stylesheet" href="./css/swiper-bundle.min.css" type="text/css" /> -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> -->
     <link rel="stylesheet" href="./css/reset.css" type="text/css" />
     <link rel="stylesheet" href="./css/layout_desktop.css" type="text/css" />
     <link rel="stylesheet" href="./css/layout_mobile.css" type="text/css" />
