極限圖片修正 工作經歷文字修誤  #顏色調整

--- a/home.html
+++ b/home.html
@@ -385,7 +385,7 @@
                     <div class="wrapYidu Mwrap">
                         <div class="WMobileList">
                             <p>2012-2014</p>
-                            <h3>遊實習商業設計</h3>
+                            <h3>實習商業設計</h3>
                             <p>欣都有限公司</p>
                         </div>
                     </div>
