--- a/home.html
+++ b/home.html
@@ -25,19 +25,19 @@
         <nav>
             <div class="navbar">
                 <a href=""><svg class="logo">
-            <use xlink:href="./icomoon/symbol-defs.svg#icon-chu-logo"></use>
-          </svg></a>
+                        <use xlink:href="./icomoon/symbol-defs.svg#icon-chu-logo"></use>
+                    </svg></a>
                 <svg class="menu">
-          <use xlink:href="./icomoon/symbol-defs.svg#icon-menu"></use>
-        </svg>
+                    <use xlink:href="./icomoon/symbol-defs.svg#icon-menu"></use>
+                </svg>
 
             </div>
 
         </nav>
         <div class="navbarM">
             <svg class="close">
-        <use xlink:href="./icomoon/symbol-defs.svg#icon-close"></use>
-      </svg>
+                <use xlink:href="./icomoon/symbol-defs.svg#icon-close"></use>
+            </svg>
             <ul class="navListM">
 
                 <li>Home</li>
@@ -61,8 +61,8 @@
                     <img class="H1chu0" src="./images/header/H1chu0.png" alt="smokey">
 
                     <svg class="arrow_down">
-            <use xlink:href="./icomoon/symbol-defs.svg#icon-keyboard_arrow_down"></use>
-          </svg>
+                        <use xlink:href="./icomoon/symbol-defs.svg#icon-keyboard_arrow_down"></use>
+                    </svg>
 
                 </div>
 
@@ -78,8 +78,8 @@
                             <div class="shy2"></div>
                         </div>
                         <svg>
-              <use xlink:href="./icomoon/symbol-defs.svg#icon-littechu"></use>
-            </svg>
+                            <use xlink:href="./icomoon/symbol-defs.svg#icon-littechu"></use>
+                        </svg>
 
                     </div>
 
@@ -98,7 +98,7 @@
                             <h4>插畫角色設計</h4>
                             <h4>網頁設計與切版</h4>
                             <h4>大圖輸出及印刷品排版</h4><br>
-                    
+
                             <h4>行銷圖文創作</h4>
                             <h4>視覺識別系統設計</h4>
 
@@ -113,8 +113,8 @@
                     <div class="row skillbox">
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobeaftereffects"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobeaftereffects"></use>
+                            </svg>
                             <p>Aftereffects</p>
                         </div>
 
@@ -123,90 +123,90 @@
 
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobepremiere"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobepremiere"></use>
+                            </svg>
                             <p>Premiere</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobexd"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobexd"></use>
+                            </svg>
                             <p>XD</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobeindesign"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobeindesign"></use>
+                            </svg>
                             <p>Indesign</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobeillustrator"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobeillustrator"></use>
+                            </svg>
                             <p>Illustrator</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobedreamweaver"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobedreamweaver"></use>
+                            </svg>
                             <p>Dreamweaver</p>
                         </div>
 
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobephotoshop"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-adobephotoshop"></use>
+                            </svg>
                             <p>Photoshop</p>
                         </div>
 
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-css3"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-css3"></use>
+                            </svg>
                             <p>Css3</p>
                         </div>
 
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-visualstudiocode"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-visualstudiocode"></use>
+                            </svg>
                             <p>VScode</p>
                         </div>
 
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-jquery"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-jquery"></use>
+                            </svg>
                             <p>jQuery</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-bootstrap"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-bootstrap"></use>
+                            </svg>
                             <p>Bootstrap</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-html5"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-html5"></use>
+                            </svg>
                             <p>Html5</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-javascript"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-javascript"></use>
+                            </svg>
                             <p>Javascript</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-php"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-php"></use>
+                            </svg>
                             <p>PHP</p>
                         </div>
                         <div class="skill_SET  col-2 col-sm-1  col-lg-1 col-xl-1 ">
                             <svg class="skills-icon ">
-                <use xlink:href="./icomoon/symbol-defs.svg#icon-mysql"></use>
-              </svg>
+                                <use xlink:href="./icomoon/symbol-defs.svg#icon-mysql"></use>
+                            </svg>
                             <p>MySQL</p>
                         </div>
 
@@ -219,19 +219,20 @@
                             <p class="License"> 丙級廣告設計技術士</p>
 
                         </div>
+                        <div class=" col-12  col-md-12
+                        col-lg-12
+                        col-xl-3 ">
+
+                            <p class="License">丙級中餐素食技術士</p>
+
+                        </div>
                         <div class="col-12  col-md-12    col-lg-12
                          col-xl-3 ">
                             <p class="License">新北市第一屆街頭藝人認證</p>
 
                         </div>
 
-                        <div class=" col-12  col-md-12
-                          col-lg-12
-                          col-xl-3 ">
 
-                            <p class="License">丙級中餐素食技術士</p>
-
-                        </div>
                         <div class=" col-12  col-md-12    col-lg-12
                          col-xl-3 ">
                             <p class="License">復興商工人像速寫高階檢定</p>
@@ -282,7 +283,9 @@
                             <p class="company">和信超媒體股份有限公司戲谷分公司</p><br>
                             <p>1.遊戲活動Web/mobile 網頁設計與切板，撰寫html、css、規劃RWD.<br> 2.日本代理遊戲圖素在地化、Logo與banner設計，道具圖繪製.
                                 <br> 3.百件實體周邊設計，例:吊飾、抱枕、年曆等等製作，供商城販售.
-                                <br> 4.異業合作的活動宣傳印刷品（例:酷卡、產品外包裝等）和戶外大型輸出等平面設計. <br> 5.網路宣傳圖設計（Facebook、Google聯播網、各大入口媒體AD）. <br> 6.跨部門協助研發團隊，博弈遊戲APP UI介面優化.<br> 7.協助執行遊戲2D美術設計及ICON製作。
+                                <br> 4.異業合作的活動宣傳印刷品（例:酷卡、產品外包裝等）和戶外大型輸出等平面設計. <br>
+                                5.網路宣傳圖設計（Facebook、Google聯播網、各大入口媒體AD）. <br> 6.跨部門協助研發團隊，博弈遊戲APP UI介面優化.<br>
+                                7.協助執行遊戲2D美術設計及ICON製作。
                                 <br> 8.商城官網吉祥物角色設計.
                             </p><br>
                             <a href="workFuntown.html">More</a>
@@ -414,15 +417,15 @@
                         <div class="chevron-left">
 
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M15.422 16.594l-1.406 1.406-6-6 6-6 1.406 1.406-4.594 4.594z"></path>
-              </svg>
+                                <path d="M15.422 16.594l-1.406 1.406-6-6 6-6 1.406 1.406-4.594 4.594z"></path>
+                            </svg>
 
 
                         </div>
                         <div class="chevron-right">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M8.578 16.594l4.594-4.594-4.594-4.594 1.406-1.406 6 6-6 6z"></path>
-              </svg>
+                                <path d="M8.578 16.594l4.594-4.594-4.594-4.594 1.406-1.406 6 6-6 6z"></path>
+                            </svg>
                         </div>
 
 
@@ -475,7 +478,8 @@
                         </a>
                     </div>
                     <div class="row hobbytext">
-                        唱歌(劇)／逛玩具店／玩電玩／看漫畫／觀賞歌舞劇／看超級好笑卡通或美劇／看電影／待在安靜的環境／散步／不專業但很專注的拍攝／看房屋室內擺設／觀察人類的動作／分析個性／隨著當下的情緒聽音樂／出國旅遊／欣賞畫作（肖像、西方神話、人文風俗）／逛展覽／跳舞／做重訓／寄卡片／閱讀勵志心靈成長書籍／關注星座運勢／特殊化妝（殭屍）／繪畫（壓克力、水彩、素描、電繪、麥克筆、油畫 ...）／坐公車看沿途風景／觀賞姿體練習體操／劇場武功拉筋
+                        唱歌(劇)／逛玩具店／玩電玩／看漫畫／觀賞歌舞劇／看超級好笑卡通或美劇／看電影／待在安靜的環境／散步／不專業但很專注的拍攝／看房屋室內擺設／觀察人類的動作／分析個性／隨著當下的情緒聽音樂／出國旅遊／欣賞畫作（肖像、西方神話、人文風俗）／逛展覽／跳舞／做重訓／寄卡片／閱讀勵志心靈成長書籍／關注星座運勢／特殊化妝（殭屍）／繪畫（壓克力、水彩、素描、電繪、麥克筆、油畫
+                        ...）／坐公車看沿途風景／觀賞姿體練習體操／劇場武功拉筋
                     </div>
                 </div>
                 <footer>
@@ -536,7 +540,8 @@
 
     <!-- jqury -->
     <!-- <script src="./js/jquery-3.5.1.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="./js/carousel01.js"></script>
     <script src="./js/chu0mousemove.js"></script>
     <script src="./js/lazysizes.min.js"></script>
@@ -563,7 +568,7 @@
             pagination: {
                 el: '.swiper-pagination',
                 clickable: true,
-                renderBullet: function(index, className) {
+                renderBullet: function (index, className) {
 
                     switch (index) { //用来显示自定义的文本，将(index + 1)替换为text即可
                         case 0:
@@ -596,7 +601,7 @@
 
         // 點工作經歷---------------------------
 
-        $('.worklist li').click(function() {
+        $('.worklist li').click(function () {
             // console.log('hi',$('.worklist li').index(this));
             // 取LI第幾個的值
             let workLi = $('.worklist li').index(this);
@@ -631,22 +636,22 @@
 
 
         // 害羞點擊-------------------------
-        $('.littlechu svg').click(function() {
+        $('.littlechu svg').click(function () {
             $('.shybox').css('opacity', '0.9');
             // $('.littlechu svg').css('opacity', '0.8');
         })
 
         // 手機版菜單點出--------------------
 
-        $('.menu').click(function() {
+        $('.menu').click(function () {
             $('.navbarM').css('transform', 'translate3d(0px,0px,0px)')
         })
-        $('.close').click(function() {
+        $('.close').click(function () {
             $('.navbarM').css('transform', 'translate3d(-1200px,0px,0px)')
         })
 
         //---------------------------------手機版的nav的表 第幾個跳第幾個-----------------------
-        $('.navListM li').click(function() {
+        $('.navListM li').click(function () {
 
             // mobile在nav取LI第幾個的值
             let navLi = $('.navListM li').index(this);
@@ -659,7 +664,7 @@
 
 
         //封面箭頭往下
-        $('.arrow_down').click(function() {
+        $('.arrow_down').click(function () {
             swiper.slideTo(1);
         })
     </script>
