--- a/workExtreme.html
+++ b/workExtreme.html
@@ -121,12 +121,10 @@
         data-src="./images/work18extreme/extreme (13).png" alt="網站UI設計"><img class="lazyload"
         data-src="./images/work18extreme/extreme (14).png" alt="網站UI設計"><img class="lazyload"
         data-src="./images/work18extreme/extreme (15).png" alt="Logo設計">
-        <img class="lazyload"
-        data-src="./images/work18extreme/extreme (16).png" alt="電競比賽報名網站規劃">
-       <img class=" lazyload " data-src=" ./images/work18extreme/extreme (17).png " alt="
-        獎金字卡設計 "><img class=" lazyload "
-        data-src=" ./images/work18extreme/extreme (18).png " alt=" 協會Logo設計 "><img class=" lazyload "
-        data-src=" ./images/work18extreme/extreme (19).png " alt=" 插圖繪製 "><img class=" lazyload "
+      <img class="lazyload" data-src="./images/work18extreme/extreme (16).png" alt="電競比賽報名網站規劃">
+      <img class=" lazyload " data-src=" ./images/work18extreme/extreme (17).png " alt="
+        獎金字卡設計 "><img class=" lazyload " data-src=" ./images/work18extreme/extreme (18).png " alt=" 協會Logo設計 "><img
+        class=" lazyload " data-src=" ./images/work18extreme/extreme (19).png " alt=" 插圖繪製 "><img class=" lazyload "
         data-src=" ./images/work18extreme/extreme (20).png " alt=" 大型勘版設計 "><img class=" lazyload "
         data-src=" ./images/work18extreme/extreme (21).png " alt=" 電競聯賽網站 "><img class=" lazyload "
         data-src=" ./images/work18extreme/extreme (22).png " alt=" 邀請DM設計 "><img class=" lazyload "
@@ -137,8 +135,7 @@
         data-src=" ./images/work18extreme/extreme (27).png " alt=" 電視轉播鏡面設計 ">
       <img class=" lazyload " data-src=" ./images/work18extreme/extreme (1).gif " alt=" 電競聯賽網站 ">
       <img class=" lazyload " data-src=" ./images/work18extreme/extreme (1).jpg " alt=" 大型牆面廣告設計 "><img class="
-        lazyload "
-        data-src=" ./images/work18extreme/extreme (2).jpg " alt=" 大圖廣告設計 "><img class=" lazyload "
+        lazyload " data-src=" ./images/work18extreme/extreme (2).jpg " alt=" 大圖廣告設計 "><img class=" lazyload "
         data-src=" ./images/work18extreme/extreme (3).jpg " alt=" Logo設計 "><img class=" lazyload "
         data-src=" ./images/work18extreme/extreme (4).jpg " alt=" 布條設計 "><img class=" lazyload "
         data-src=" ./images/work18extreme/extreme (5).jpg " alt=" 大圖廣告設計 "><img class=" lazyload "
@@ -173,8 +170,7 @@
   <script src=" https://unpkg.com/swiper/swiper-bundle.min.js "></script>
   <!-- <script src=" ./js/jquery-3.5.1.js "></script> -->
   <script src=" https://code.jquery.com/jquery-3.5.1.js " integrity="
-        sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin=" anonymous "></script>
+        sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin=" anonymous "></script>
   <script src=" ./js/lazysizes.min.js "></script>
   <script>
     // 手機版菜單點出--------------------
@@ -199,7 +195,7 @@
 
 
 
-    // pop圖片----------------------------------------
+    // pop圖片------------------------------------------
     $('.picBox img').click(function () {
       // 定義 取出圖片位置的值
       let imgSrc = $(this).attr('src');
@@ -208,10 +204,10 @@
       console.log('call', imgAlt);
       // 在body增加div
       $('body').append(` 
-         <div class=" popup "></div>
-    <div class=" popBox ">
-        <img class=" lazyload " data-src=" " alt=" ">
-        <svg  class=" popclose "><use xlink:href=" ./icomoon/symbol-defs.svg#icon-close "></use>  </svg>
+         <div class="popup"></div>
+    <div class="popBox">
+        <img class="lazyload" data-src="" alt="">
+        <svg  class="popclose"><use xlink:href="./icomoon/symbol-defs.svg#icon-close"></use>  </svg>
         <p></p>
     </div>
     
