--- a/home.html
+++ b/home.html
@@ -7,6 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="阮楚琳(Chu-lin)作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
     <title>Chu-lin's portfolio</title>
+
+    <meta property="og:site_name" content="Chu-lin's portfolio" />
+  
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Chu-lin's portfolio" />
+    <meta property="og:description" content="阮楚琳(Chu-lin)作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
+    <meta property="og:image" content="https://chu000.github.io/JS-YourManGame/img/man%20(4).jpg" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="1080px" />
+    <meta property="og:image:height" content="520px" />
+    <meta property="og:url" content="https://chu000.github.io/Chulin/home.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="canonical" href="https://chu000.github.io/Chulin/home.html">
     <!-- for swiper link css -->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" type="text/css" />
     <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />      -->
