--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Chu-lin's portfolio" />
     <meta property="og:description" content="阮楚琳(Chu-lin)作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
-    <meta property="og:image" content="https://chu000.github.io/JS-YourManGame/img/man%20(4).jpg" />
-    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image" content="https://chu000.github.io/Chulin/images/cover.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1080px" />
     <meta property="og:image:height" content="520px" />
     <meta property="og:url" content="https://chu000.github.io/Chulin/home.html" />
